--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <header class="header">
-
         <div class="container page-header-container">       
             <nav class="nav">
                 <a class="nav-logo" href="./index.html">web<span class="accent">Studio</span></a>
@@ -38,10 +37,8 @@
                         <a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
-                            
             </address>
         </div>
-        
     </header>
 
     <main>
@@ -574,7 +571,7 @@
         </div>
     </div>
     <!-- MOBILE MENU -->
-    <div class="mobile-menu">
+    <div class="mobile-menu container">
         <button class="mobile-menu-close-btn" type="button">
             <svg class="mobile-menu-close-icon" 
                 width="8" 
@@ -586,26 +583,26 @@
         <nav class="mobile-menu-nav">
             <ul class="mobile-menu-nav-list">
                 <li class="mobile-menu-nav-item">
-                    <a class="mobile-menu-nav-link link" href="/index.html">Studio</a></li>
+                    <a class="mobile-menu-nav-link link nav-curent" href="/index.html">Studio</a></li>
                 <li class="mobile-menu-nav-item">
                     <a class="mobile-menu-nav-link link" href="/index.html">Portfolio</a></li>
                 <li class="mobile-menu-nav-item">
                     <a class="mobile-menu-nav-link link" href="/index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address class="mobile-menu-address">
-            <ul class="mobile-menu-address-list">
-                <li class="mobile-menu-address-item">
-                    <a class="mobile-menu-address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="mobile-menu-address-item">
-                    <a class="mobile-menu-address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
-        <div class="mobile-menu-social">
+        <div class="mobile-menu-contact">
+            <address class="mobile-menu-address">
+                <ul class="mobile-menu-address-list">
+                    <li class="mobile-menu-address-item">
+                        <a class="mobile-menu-address-link link adress-curent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="mobile-menu-address-item">
+                        <a class="mobile-menu-address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
             <ul class="mobile-menu-social-list">
-                <li mobile-menu-social-item>
+                <li class="mobile-menu-social-item">
                     <a class="mobile-menu-social-link" href="">
                         <svg class="mobile-menu-social-icon" 
                             width="24" 
@@ -615,7 +612,7 @@
                         </svg>
                     </a>
                 </li>
-                <li mobile-menu-social-item>
+                <li class="mobile-menu-social-item">
                     <a class="mobile-menu-social-link" href="">
                         <svg class="mobile-menu-social-icon" 
                             width="24" 
@@ -625,7 +622,7 @@
                         </svg>
                     </a>
                 </li>
-                <li mobile-menu-social-item>
+                <li class="mobile-menu-social-item">
                     <a class="mobile-menu-social-link" href="">
                         <svg class="mobile-menu-social-icon" 
                             width="24" 
@@ -635,7 +632,7 @@
                         </svg>
                     </a>
                 </li>
-                <li mobile-menu-social-item>
+                <li class="mobile-menu-social-item">
                     <a class="mobile-menu-social-link" href="">
                         <svg class="mobile-menu-social-icon" 
                             width="24" 
